@@ -17,7 +17,7 @@ package org.patryk3211.powergrid.circuits.gui;
 
 import com.simibubi.create.AllKeys;
 import com.simibubi.create.AllSoundEvents;
-import com.simibubi.create.foundation.utility.FilesHelper;
+import net.createmod.catnip.gui.TickableGuiEventListener;
 import net.minecraft.ChatFormatting;
 import net.minecraft.client.Minecraft;
 import net.minecraft.client.gui.Font;
@@ -30,14 +30,13 @@ import org.patryk3211.powergrid.utility.Lang;
 import java.io.IOException;
 import java.nio.file.Files;
 import java.nio.file.NoSuchFileException;
-import java.nio.file.Path;
 import java.nio.file.Paths;
 import java.util.ArrayList;
 import java.util.List;
 
 import static net.createmod.catnip.gui.widget.AbstractSimiWidget.HEADER_RGB;
 
-public class CircuitFileBox extends EditBox {
+public class CircuitFileBox extends EditBox implements TickableGuiEventListener {
     private int tick;
     private final List<String> availableSchematics = new ArrayList<>();
     private int selectedIndex = 0;
@@ -62,12 +61,17 @@ public class CircuitFileBox extends EditBox {
         super.tick();
         if(tick++ >= 20) {
             refreshFiles();
+            tick = 0;
         }
         soundPlayed = false;
     }
 
     private void refreshFiles() {
-        FilesHelper.createFolderIfMissing(Path.of("circuits"));
+        try {
+            Files.createDirectories(Paths.get("circuits"));
+        } catch (IOException e) {
+            PowerGrid.LOGGER.error("Failed to create a folder", e);
+        }
         availableSchematics.clear();
 
         try {
